apps/production/photoprism/scott/patch-photoprism-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: photoprism-app
  labels:
    app: photoprism
spec:
  template:
  selector:
    matchLabels:
      app: photoprism
      role: photoprism
      tenant: scott

    metadata:
      labels:
        # add this tenant label so the service can distinguish pods between oksana and scott:
        tenant: scott

    spec:
      containers:
        # documentation : https://docs.photoprism.app/getting-started/docker-compose/
        - name: photoprism
      volumes:
        - name: import
          hostPath:
            path: /mnt/thedatapool/photos/scott/import
        - name: originals
          hostPath:
            path: /mnt/thedatapool/photos/scott/organized-originals
        - name: storage
          hostPath:
            path: /mnt/thedatapool/app-data/photoprism-scott/app/storage
